Tareas/Tareas-MAGISTRAL/T4/Figure-6-4/Grammar.g4
grammar Grammar;

ID	: [a-zA-Z_][a-zA-Z0-9_]*;
NUM	: [0-9]+;
WS	: [ \t\n\r]+ -> skip;

e	: e op=('+'|'-') t	#Sumres
	| t			        #PassT
	;

t	: t op=('*'|'/') f	#Muldiv
	| f			        #PassF
	;

f	: '(' e ')'		#PassE
	| ID			#Id
	| NUM			#Num
	;
